--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "main": "./lib/tiny-jsonrpc.js",
 
     "devDependencies": {
-        "jasmine-node": "1.x.x"
+        "mocha": "1.3.x",
+        "expect.js": "0.1.x",
+        "sinon": "1.4.x"
     },
 
     "license": "MIT"
