Browser support and tests
Add two new build targets: all and test-browser

'make all' uses requirejs to build `dist/tiny-jsonrpc.js`, which is a
single file containing all dependencies. It is compatible with AMD or
can instead expose a global symbol: tinyJsonRpc.

'make test-browser' starts an http server in the `test` directory. You
can then load localhost:8080 in your browser to run the tests. Hit
Ctrl-C to stop the server. If you want to use a different port, set
TEST_PORT.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "main": "./lib/tiny-jsonrpc.js",
 
     "devDependencies": {
+        "requirejs": "2.0.x",
         "mocha": "1.3.x",
         "expect.js": "0.1.x",
-        "sinon": "1.4.x"
+        "sinon": "1.4.x",
+        "http-server": "0.5.x"
     },
 
     "license": "MIT"
