--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-    "name": "tiny-jsonrpc",
-    "version": "0.2.1",
-    "author": "Lon Ingram <lon@waterfallmobile.com>",
-    "description": "JavaScript JSON-RPC 2.0 server with no runtime dependencies",
-
-    "main": "./lib/tiny-jsonrpc.js",
-
-    "devDependencies": {
-        "requirejs": "2.0.x",
-        "mocha": "1.3.x",
-        "expect.js": "0.1.x",
-        "sinon": "1.4.x",
-        "http-server": "0.5.x"
-    },
-
-    "license": "MIT"
+  "name": "tiny-jsonrpc",
+  "version": "1.0.0",
+  "author": "Lon Ingram <lawnsea@gmail.com>",
+  "description": "JavaScript JSON-RPC 2.0 client and server with no runtime dependencies",
+  "repository": "tiny-jsonrpc/tiny-jsonrpc",
+  "main": "./lib/tiny-jsonrpc.js",
+  "devDependencies": {
+    "expect.js": "0.1.x",
+    "expose-loader": "^0.7.1",
+    "grunt": "^0.4.5",
+    "grunt-webpack": "^1.0.11",
+    "gruntify-eslint": "^1.3.0",
+    "http-server": "0.5.x",
+    "mocha": "1.3.x",
+    "sinon": "1.4.x",
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "license": "MIT"
 }
