--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "description": "JavaScript JSON-RPC 2.0 client and server with no runtime dependencies",
   "repository": "tiny-jsonrpc/tiny-jsonrpc",
   "main": "./lib/tiny-jsonrpc.js",
+  "scripts": {
+    "test": "./node_modules/.bin/karma start --single-run"
+  },
   "devDependencies": {
-    "expect.js": "0.1.x",
     "expose-loader": "^0.7.1",
     "grunt": "^0.4.5",
     "grunt-webpack": "^1.0.11",
     "gruntify-eslint": "^1.3.0",
-    "http-server": "0.5.x",
-    "mocha": "1.3.x",
-    "sinon": "1.4.x",
+    "imports-loader": "^0.6.5",
+    "istanbul-instrumenter-loader": "^0.1.3",
+    "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.3",
+    "karma-tap": "^1.0.3",
+    "karma-webpack": "^1.7.0",
+    "sinon": "^1.17.3",
+    "tape": "^4.4.0",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
