--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test-browser": "./node_modules/.bin/karma start --single-run",
     "test-node": "node test/index.js",
-    "test": "npm run test-node"
+    "test": "npm run test-node && npm run test-browser"
   },
   "devDependencies": {
     "expose-loader": "^0.7.1",
